css container, inherit delete

--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -71,7 +71,9 @@ select {
   margin-left: auto;
 
   @media screen and (max-width: 540px) {
-    max-width: 540px;
+    //max-width: 540px;
+    max-width: 400px;
+    min-width: 320px;
   }
 
   @media screen and (min-width: 541px) and (max-width: 767px) {
@@ -84,6 +86,7 @@ select {
 
   @media (min-width: 1024px) {
     min-width: 1024px;
+    max-width: 1400px;
   }
 }
 
