--- a/src/scss/movieList/_movieList.scss
+++ b/src/scss/movieList/_movieList.scss
@@ -45,7 +45,7 @@
 
   .card-img-top {
     width: 100%;
-    height: inherit;
+    //height: inherit;
     display: block;
     border-radius: 13px 13px 0 0;
   }
