fix problems with media width

--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -70,6 +70,8 @@ select {
   margin-right: auto;
   margin-left: auto;
 
+  min-height: calc(100vh - 50px);
+
   @media screen and (max-width: 540px) {
     //max-width: 540px;
     max-width: 400px;
