--- a/src/scss/movieList/_movieList.scss
+++ b/src/scss/movieList/_movieList.scss
@@ -47,15 +47,13 @@
     width: 100%;
 
     max-width: 400px;
-    height: auto;
-
-    //height: inherit;
     display: block;
     border-radius: 13px 13px 0 0;
 
-    @media screen and (min-width: 1024px) {
-      min-height: 340px;
-    }
+    // @media screen and (min-width: 1024px) {
+    //   min-height: 340px;
+    //   max-height: 420px;
+    // }
   }
 
   &:hover {
