--- a/src/scss/movieList/_movieList.scss
+++ b/src/scss/movieList/_movieList.scss
@@ -46,12 +46,14 @@
   .card-img-top {
     width: 100%;
 
-    max-width: 400px;
     height: auto;
-
-    //height: inherit;
     display: block;
     border-radius: 13px 13px 0 0;
+
+    @media screen and (min-width: 768px) {
+      max-height: 370px;
+      max-width: 400px;
+    }
 
     @media screen and (min-width: 1024px) {
       min-height: 450px;
