--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,5 @@
 @import './base/general.scss';
-
+@import './base/fonts.scss';
 @import './preloaderPage/circle-preloader.scss';
 @import './preloaderPage/words-preloader.scss';
 
