--- a/src/templates/header/dropDownMenu.hbs
+++ b/src/templates/header/dropDownMenu.hbs
@@ -7,5 +7,5 @@
 <li class="menu__list__item user__item__js" data-status='watchedLater'><i class="material-icons icons__header_menu watched">bookmark_border</i>
     <p class="menu__list__title">Опосля</p>
 </li>
-<li class="menu__list__item"><i class="material-icons icons__header_menu sensor_door">sensor_door</i><a
-        class="user__logout" href="#">Выйти</a></li>
+<li class="menu__list__item user__logout"><i class="material-icons icons__header_menu sensor_door">sensor_door</i><p
+        class="user__logout">Выйти</p></li>
