--- a/src/templates/loginRegFormEn.hbs
+++ b/src/templates/loginRegFormEn.hbs
@@ -38,6 +38,16 @@
               <button type="submit" class="button submit__login">Sign In</button>
             </form>
             <div class="hr"></div>
+            <p class="google__login">or login with</p>
+            <div class="login__wrap">
+              <i class="facebook_login"></i>
+            <i class="google_login"></i>
+            <i class="github_login"></i>
+            <i class="twitter_login"></i>
+            </div>
+
+
+              
           </div>
           <div class="sign-up-htm">
             <form class="form__sign__up group">
