add hover for icon-home

--- a/src/scss/header/_navigation.scss
+++ b/src/scss/header/_navigation.scss
@@ -105,6 +105,10 @@
   }
 }
 
+.navigation-left-side:hover .icons__header__home {
+  color: #f8104d;
+}
+
 .navigation-right-side {
   display: flex;
   display: block;
