adds width for dropdownmenu, margin for registration

--- a/src/scss/header/_header-registration.scss
+++ b/src/scss/header/_header-registration.scss
@@ -163,6 +163,10 @@ a {
   transform: scale(1) rotate(-45deg);
 }
 
+.tab.sign__in_en {
+  margin-left: 28px;
+}
+
 .login-html
   .sign-in:checked
   + .tab
