add username on user menu add notification on reg

--- a/src/templates/header/dropDownMenu.hbs
+++ b/src/templates/header/dropDownMenu.hbs
@@ -1,3 +1,6 @@
+<li class="menu__list__item user__item__js"><i class="material-icons icons__header_menu">person</i>
+    <p class="menu__list__title">{{username}}</p>
+</li>
 <li class="menu__list__item user__item__js" data-status='favorites'><i class="material-icons icons__header_menu favorites">favorite_border</i>
     <p class="menu__list__title">Избранное</p>
 </li>
