--- a/src/templates/loginRegFormRu.hbs
+++ b/src/templates/loginRegFormRu.hbs
@@ -45,13 +45,22 @@
             <i class="github_login"></i>
             <i class="twitter_login"></i>
             </div>
-
           </div>
           <div class="sign-up-htm">
             <form class="form__sign__up group">
               <label class="label"
                 >Имя пользователя
-                <input type="text" class="input username__sign__up" />
+                <input type="text" class="input username__sign__up" required  placeholder="Ben Afflek" pattern='[A-Za-z]{1, 15}' />
+              </label>
+              <label class="label"
+                >Адрес почты
+                <input
+                  type="email"
+                  class="input email__sign__up"
+                  placeholder="moviemania@gmail.com"
+                  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+                  required
+                />
               </label>
               <label class="label"
                 >Пароль
@@ -62,16 +71,6 @@
                   data-type="password"
                   minlength="4"
                   maxlength="16"
-                  required
-                />
-              </label>
-              <label class="label"
-                >Адрес почты
-                <input
-                  type="email"
-                  class="input email__sign__up"
-                  placeholder="moviemania@gmail.com"
-                  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
                   required
                 />
               </label>
