add routing logout

--- a/src/scss/movieList/_movieList.scss
+++ b/src/scss/movieList/_movieList.scss
@@ -49,15 +49,14 @@
     display: block;
     border-radius: 13px 13px 0 0;
 
-    @media screen and (min-width: 768px) {
-      max-height: 370px;
-      max-width: 400px;
-    }
+    // @media screen and (min-width: 768px) {
+    //   max-height: 370px;
+    //   max-width: 400px;
+    // }
 
-    @media screen and (min-width: 1024px) {
-      min-height: 450px;
-    }
-
+    // @media screen and (min-width: 1024px) {
+    //   min-height: 450px;
+    // }
   }
 
   &:hover {
