min, clear user interest

--- a/src/templates/movieMarkupCard.hbs
+++ b/src/templates/movieMarkupCard.hbs
@@ -18,7 +18,7 @@
       <p class="card-title-text">{{allCountries}}</p>
       <p class="card-title-text">{{allGenres}}</p>
       <div class="card-title-text">
-        <p class="icon-runtime-min"><i class="material-icons icon-runtime">theaters</i>{{runtime}} мин</p>
+        <p class="icon-runtime-min"><i class="material-icons icon-runtime">theaters</i>{{runtime}} {{min}}</p>
       </div>
       <p class="card-text-overview">{{overview}}</p>
       <p class="card-text-rainting" data-id={{id}}><i class="material-icons icon-raiting">star_rate</i>{{vote_average}}
